===========
PyObjC NEWS
===========

An overview of the relevant changes in new, and older, releases.


Version 1.4.1 (2006-??-??)
--------------------------


- NibClassBuilder.AutoBaseClass raises an exception when the (optional) python 
  definition for an outlet is incompatible with the definition in the NIB file.

- objc.ivar is now introspectable (that is, you can query an ivar for its 
  name and type)

- PyObjC now uses setuptools. Setuptools support is fairly minimal at the 
  moment, we expect to move more of the build infrastructure to setuptools and
  to split PyObjC into smaller eggs.

- Fix an issue that made is possible to create weakref's to subclasses of 
  subclasses of Objective-C classes. This was unintentional behaviour, the 
  weakref is to the proxy (see the news for 1.0b1 for more details).

- Add RoundTransparentWindow and DragItemAround examples in ``Examples/AppKit``.

  Both are ports of Objective-C examples at ADC and were provided by
  ytrewq1.

- Fix issue where programs would crash with an badly aligned C-stack on
  some problems. This issue only affected Intel systems.

- Remove ``OC_PythonObject.pythonifyStructTable``. This method of wrapping
  structs was untested and not used in the core distribution. Use
  ``objc.createStructType`` instead.

- Binaries build on 10.4 also work on 10.3. This means it is no longer 
  necessary to build PyObjC on the lowest version of the OS that you want
  to run your binaries on.  Doing this with python is somewhat of a black
  art, please test your applications on the lowest version of the OS that
  you want to support to make sure that this actually works.

- PyOpenGLContext -setValues:forParameter: and -getValues:forParameter: got
  wrapped.

Version 1.4 (2006-06-14)
--------------------------

- Classes whose name starts with and underscore are no longer imported when
  using ``objc.loadBundle``. They are still available using 
  ``objc.lookUpClass``.
