@@ -8,6 +8,9 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.4.1 (2006-??-??)
 --------------------------
 
+- objc.inject now works on Intel. Thanks to ytrewq1 who did the actual port,
+  and Robert Chin and Nicholas Riley who allowed us to reuse parts of F-Script
+  Anywhere.
 
 - NibClassBuilder.AutoBaseClass raises an exception when the (optional) python 
   definition for an outlet is incompatible with the definition in the NIB file.
